feat(metrics): Implement dashboard metrics and compliance reports entities, repositories, and event listeners
- Added `DashboardMetricsEntity` and `DashboardMetricsKey` for storing dashboard metrics.
- Created `JpaDashboardMetricsRepository` and `SpringDataDashboardMetricsRepository` for data access.
- Introduced `JpaComplianceReportRepository` and `SpringDataComplianceReportRepository` for compliance reports.
- Implemented integration event listeners for compliance report generation and data quality completion.
- Developed dev seeders for populating initial data for dashboard metrics and compliance reports.
- Created SQL migration scripts for setting up the database schema and evolving existing tables.